<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloMoon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hellomoon_play_audio">Play Audio</string>
     <string name="hellomoon_play_video">Play Video</string>
    <string name="hellomoon_pause">Pause</string>
    <string name="hellomoon_stop">Stop</string>
    <string name="hellomoon_restart">Restart</string>
    <string name="hellomoon_description">Neil Armstrong stepping onto the moon</string>
    <string name="hellomoon_video_text">Video</string>
    <string name="hellomoon_audio_text">Audio</string>

</resources>
