<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <SurfaceView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/hellomoon_description"
        android:scaleType="centerInside" />

    <TableRow
        android:layout_weight="0"
        android:gravity="center|bottom" >

        <Button
            android:id="@+id/hellomoon_audio_playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_play_audio" />

        <Button
            android:id="@+id/hellomoon_video_playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_play_video" />
    </TableRow>

    <TableRow
        android:layout_weight="0"
        android:gravity="center|bottom" >

        <Button
            android:id="@+id/hellomoon_pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_pause" />

        <Button
            android:id="@+id/hellomoon_stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_stop" />

        <Button
            android:id="@+id/hellomoon_restartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hellomoon_restart" />
    </TableRow>

</TableLayout>